# game-of-life-sfml

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  cloc.sh  format.sh  launch.sh  lint.sh
include/: App.hpp  Life.cuh  Life.hpp  Mode.hpp  helper_cuda.cuh
src/: App.cpp  Life.cpp  Life.cu  main.cpp
